<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/demo_list_creator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/listTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDD"
            android:padding="5dp"
            android:text="@string/list_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/listTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/listRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/listview" />

            <RadioButton
                android:id="@+id/expandableRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expandablelistview" />
        </RadioGroup>

        <TextView
            android:id="@+id/listFeaturesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="#DDD"
            android:padding="5dp"
            android:text="@string/list_features"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/multiChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multichoice" />

        <CheckBox
            android:id="@+id/swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe" />

        <CheckBox
            android:id="@+id/dragdrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dragdrop" />

        <CheckBox
            android:id="@+id/slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide" />

        <Button
            android:id="@+id/startDemo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_demo" />
    </LinearLayout>

</ScrollView>