<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="8dp">
        
        
        <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="32sp"
	        android:textColor="#4285f4"
	        android:text="@string/welcome"
	        android:paddingBottom="20dp" />
        
        <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="24sp"
	        android:textColor="#777"
	        android:text="@string/to_start_exploring"
	        android:paddingBottom="10dp" />
        
        
        <TextView 
            android:id="@+id/starting_instructions"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="16sp"
	        android:textColor="#555"
	        android:paddingLeft="15dp"
	        android:text="@string/starting_instructions"/>
        
        <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="24sp"
	        android:textColor="#777"
	        android:text="@string/toggling_feature_options"
	        android:paddingBottom="10dp"
	        android:paddingTop="15dp" />
        
        <TextView 
            android:id="@+id/toggling_feature_options_instructions"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="16sp"
	        android:textColor="#555"
	        android:paddingLeft="15dp"
	        android:text="@string/toggling_feature_options_instructions"/>
        
    </LinearLayout>
    

</ScrollView>
