<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/choice_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/choiceOptionsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDD"
            android:padding="5dp"
            android:text="@string/choice_mode_options"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/group_mode" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/child_mode" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/only_one_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/groupChoiceModes"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:entries="@array/group_choice_modes"
                android:prompt="@string/group_choice_modes_label" />

            <Spinner
                android:id="@+id/childChoiceModes"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:entries="@array/child_choice_modes"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:prompt="@string/child_choice_modes" />

            <ToggleButton
                android:id="@+id/onlyOneItem"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/only_one_item" />
        </LinearLayout>
    </LinearLayout>

    <com.kemallette.ListBoost.ExpandableList.BoostExpandableListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@drawable/expander_group_holo_light" />

</LinearLayout>