<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/right_nav_drawer_content"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="#efefef" >

    <LinearLayout
        android:id="@+id/elv_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Feature Options Heading -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="15dp"
            android:text="@string/feature_options_heading"
            android:textSize="30sp"
            android:typeface="sans" />

        <!-- ChoiceModes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/multichoice"
            android:textSize="22sp"
            android:typeface="sans" />

        <ToggleButton
            android:id="@+id/toggle_multichoice"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <!-- One Item ChoiceMode Toggle -->

        <CheckBox
            android:id="@+id/toggle_one_item_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/one_item_group_or_child_only" />

        <!-- Check Children on Group Check -->

        <CheckBox
            android:id="@+id/toggle_check_children_with_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/check_children_on_group_check" />

        <!-- Group Item ChoiceModes Heading -->

        <TextView
            android:id="@+id/group_choice_options_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/group_choice_modes_heading"
            android:textSize="18sp"
            android:typeface="sans" />

        <!-- Group Item ChoiceModes Radio Group -->

        <RadioGroup
            android:id="@+id/group_choice_modes_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/group_no_choice_radio"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/group_multichoice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/multi" />

            <RadioButton
                android:id="@+id/group_one_choice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/group_no_choice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </RadioGroup>

        <!-- Child Item ChoiceModes Heading -->

        <TextView
            android:id="@+id/child_choice_options_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/child_choice_modes_heading"
            android:textSize="18sp"
            android:typeface="sans" />

        <!-- Child Item ChoiceModes Radio Group -->

        <RadioGroup
            android:id="@+id/child_choice_modes_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/child_no_choice_radio"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/child_multichoice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/multi" />

            <RadioButton
                android:id="@+id/child_one_per_group_choice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_per_group" />

            <RadioButton
                android:id="@+id/child_one_choice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/child_no_choice_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </RadioGroup>

        <!-- Item Sliding Menus -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/sliding_item_menus"
            android:textSize="22sp"
            android:typeface="sans" />

        <ToggleButton
            android:id="@+id/toggle_sliding_item_menus"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/toggle_group_sliding_menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/groups" />

        <CheckBox
            android:id="@+id/toggle_child_sliding_menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/children" />

        <!-- List Item Menu Options Count -->


        <!-- FAB -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/floating_action_button_fab"
            android:textSize="20sp"
            android:typeface="sans" />

        <ToggleButton
            android:id="@+id/toggle_fab"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/fab_scroll_mode_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/hide_on_down_scroll_show_on_up_scroll" />

        <CheckBox
            android:id="@+id/toggle_fab_menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/enable_fab_menu"
            android:visibility="invisible" />

        <!-- Expanding FAB Menu Heading -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/fab_menus_heading"
            android:textSize="18sp"
            android:typeface="sans"
            android:visibility="invisible" />

        <!-- Fab Menu Direction Radios -->

        <RadioGroup
            android:id="@+id/fab_menu_direction_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="invisible" >

            <RadioButton
                android:id="@+id/fab_menu_vertical_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/vertical"
                android:visibility="invisible" />

            <RadioButton
                android:id="@+id/fab_menu_horizontal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal"
                android:visibility="invisible" />
        </RadioGroup>

        <!-- FAB Menu Item Count -->
    </LinearLayout>

</ScrollView>